feat: finalize convex migration

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,11 @@ NEXT_PUBLIC_CONVEX_URL=https://your-project.convex.cloud
 CONVEX_DEPLOYMENT=dev:your-deployment
 # Optional for deploys
 CONVEX_DEPLOY_KEY=your_deploy_key
+
+# Resend SMTP (password reset emails)
+RESEND_FROM_EMAIL=Ledgerise <no-reply@yourdomain.com>
+RESEND_SMTP_PASSWORD=your_resend_api_key
+# Optional overrides
+RESEND_SMTP_HOST=smtp.resend.com
+RESEND_SMTP_PORT=465
+RESEND_SMTP_USER=resend
